devtools/client/themes/webconsole.css
/* ... */
.
webconsole
-
filterbar
-
primary
.
filter
-
checkbox
{
flex
-
shrink
:
0
;
margin
:
0
3px
;
display
:
flex
;
align
-
items
:
center
;
-
moz
-
user
-
select
:
none
;
}
.
webconsole
-
filterbar
-
secondary
.
devtools
-
separator
{
margin
:
0
5px
;
}
.
webconsole
-
filterbar
-
filtered
-
messages
{
/
*
Needed
so
the
bar
takes
the
whole
horizontal
space
when
it
is
wrapped
*
/
flex
-
grow
:
1
;
justify
-
content
:
flex
-
end
;
color
:
var
(
-
-
theme
-
comment
)
;
text
-
align
:
end
;
}
.
webconsole
-
filterbar
-
filtered
-
messages
.
filter
-
message
-
text
{
font
-
style
:
italic
;
-
moz
-
user
-
select
:
none
;
}
.
webconsole
-
filterbar
-
filtered
-
messages
.
reset
-
filters
-
button
{
margin
-
inline
-
start
:
0
.
5em
;
}
.
webconsole
-
output
{
flex
:
1
;
overflow
:
auto
;
}
.
webconsole
-
output
-
wrapper
.
message
{
-
-
border
-
size
:
3px
;
border
-
inline
-
start
:
var
(
-
-
border
-
size
)
solid
transparent
;
}
.
webconsole
-
output
-
wrapper
.
message
:
hover
{
border
-
inline
-
start
-
color
:
#
0a84ff
;
/
*
Photon
Design
System
Blue
50
*
/
}
.
webconsole
-
output
-
wrapper
.
message
-
flex
-
body
>
.
message
-
body
{
display
:
flex
;
flex
-
wrap
:
wrap
;
max
-
width
:
100
%
;
}
.
webconsole
-
output
-
wrapper
.
message
-
body
>
*
{
flex
-
shrink
:
0
;
}
.
webconsole
-
output
.
hideTimestamps
>
.
message
>
.
timestamp
{
display
:
none
;
}
.
message
.
startGroup
.
message
-
body
>
.
objectBox
-
string
.
message
.
startGroupCollapsed
.
message
-
body
>
.
objectBox
-
string
{
color
:
var
(
-
-
theme
-
body
-
color
)
;
font
-
weight
:
bold
;
}
.
webconsole
-
output
-
wrapper
.
message
>
.
icon
{
margin
:
3px
0
0
0
;
padding
:
0
0
0
6px
;
}
.
message
.
error
>
.
icon
:
:
before
{
background
-
position
:
-
12px
-
36px
;
}
.
message
.
warn
>
.
icon
:
:
before
{
background
-
position
:
-
24px
-
36px
;
}
.
message
.
info
>
.
icon
:
:
before
{
background
-
position
:
-
36px
-
36px
;
}
/
*
Network
Messages
*
/
.
message
.
network
.
method
{
margin
-
inline
-
end
:
5px
;
}
.
network
.
message
.
network
-
info
{
display
:
none
;
margin
-
top
:
8px
;
border
:
solid
1px
var
(
-
-
theme
-
splitter
-
color
)
;
}
.
network
.
message
.
open
.
network
-
info
{
display
:
block
;
}
.
network
.
message
.
network
-
info
.
panels
{
max
-
height
:
250px
;
min
-
height
:
100px
;
}
/
*
Hide
'
Edit
And
Resend
'
button
since
the
feature
isn
'
t
supported
in
the
Console
panel
.
*
/
.
network
.
message
#
headers
-
panel
.
edit
-
and
-
resend
-
button
{
display
:
none
;
}
.
network
.
message
#
response
-
panel
.
treeTable
{
overflow
-
y
:
hidden
;
}
.
network
.
message
-
flex
-
body
>
.
message
-
body
{
display
:
flex
;
}
/
*
Output
Wrapper
*
/
.
webconsole
-
output
-
wrapper
.
message
.
indent
{
display
:
inline
-
block
;
border
-
inline
-
end
:
solid
1px
var
(
-
-
theme
-
splitter
-
color
)
;
}
.
webconsole
-
output
-
wrapper
.
message
.
indent
[
data
-
indent
=
"
0
"
]
{
border
-
inline
-
end
:
none
;
}
.
message
.
startGroup
.
indent
.
message
.
startGroupCollapsed
.
indent
{
border
-
inline
-
end
-
color
:
transparent
;
margin
-
inline
-
end
:
5px
;
}
.
message
.
startGroup
.
icon
.
message
.
startGroupCollapsed
.
icon
{
display
:
none
;
}
/
*
*
Open
DOMNode
in
inspector
button
.
Style
need
to
be
reset
in
the
new
*
console
since
its
style
is
already
defined
in
reps
.
css
.
*
/
.
webconsole
-
output
-
wrapper
.
open
-
inspector
{
background
:
unset
;
padding
-
left
:
unset
;
margin
-
left
:
unset
;
cursor
:
unset
;
}
/
*
console
.
table
(
)
*
/
.
new
-
consoletable
{
width
:
100
%
;
border
-
collapse
:
collapse
;
-
-
consoletable
-
border
:
1px
solid
var
(
-
-
table
-
splitter
-
color
)
;
}
.
new
-
consoletable
thead
.
new
-
consoletable
tbody
{
background
-
color
:
var
(
-
-
theme
-
body
-
background
)
;
}
.
new
-
consoletable
th
{
background
-
color
:
var
(
-
-
theme
-
selection
-
background
)
;
color
:
var
(
-
-
theme
-
selection
-
color
)
;
margin
:
0
;
padding
:
5px
0
0
;
font
-
weight
:
inherit
;
border
-
inline
-
end
:
var
(
-
-
consoletable
-
border
)
;
border
-
bottom
:
var
(
-
-
consoletable
-
border
)
;
}
.
new
-
consoletable
tr
:
nth
-
of
-
type
(
even
)
{
background
-
color
:
var
(
-
-
table
-
zebra
-
background
)
;
}
.
new
-
consoletable
td
{
padding
:
3px
4px
;
min
-
width
:
100px
;
-
moz
-
user
-
focus
:
normal
;
color
:
var
(
-
-
theme
-
body
-
color
)
;
border
-
inline
-
end
:
var
(
-
-
consoletable
-
border
)
;
height
:
1
.
25em
;
line
-
height
:
1
.
25em
;
}
/
*
Layout
*
/
.
webconsole
-
output
{
flex
:
1
;
direction
:
ltr
;
overflow
:
auto
;
-
moz
-
user
-
select
:
text
;
position
:
relative
;
}
html
body
#
app
-
wrapper
{
height
:
100
%
;
margin
:
0
;
padding
:
0
;
}
body
{
overflow
:
hidden
;
}
#
app
-
wrapper
{
height
:
100
%
;
display
:
flex
;
flex
-
direction
:
column
;
}
body
#
output
-
container
{
flex
:
1
;
overflow
:
hidden
;
}
.
webconsole
-
output
-
wrapper
{
display
:
flex
;
flex
-
direction
:
column
;
height
:
100
%
;
}
/
*
Object
Inspector
*
/

